--- a/clusterloader2/pkg/execservice/manifest/exec_deployment.yaml
+++ b/clusterloader2/pkg/execservice/manifest/exec_deployment.yaml
@@ -15,4 +15,4 @@ spec:
     spec:
       containers:
       - name: agnhost
-        image: k8s.gcr.io/e2e-test-images/agnhost:2.32
+        image: hub.chinauos.com/jzy-test/e2e-agnhost:2.32
